--- a/app/styles/MyPage.module.css
+++ b/app/styles/MyPage.module.css
@@ -1,3 +1,12 @@
+.bar {
+    width: 100%;
+    margin-left: 300px;
+    height: 13vh;
+    background-color: rgba(255, 255, 255, 0.118);
+    backdrop-filter: blur(10px);
+    position: fixed;
+    z-index: 100;
+}
 .container {
     display: flex;
     flex-direction: row;
@@ -8,6 +17,7 @@
 }
 .main_container {
     width: 73vw;
+    margin-top: 13vh;
     margin-left: 23vw;
     margin-right: 3vw;
 }
