--- a/app/styles/my_page/GrassContainer.module.css
+++ b/app/styles/my_page/GrassContainer.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .tate {
     /* background-color: antiquewhite; */
