--- a/app/styles/my_page/GrassAtom.module.css
+++ b/app/styles/my_page/GrassAtom.module.css
@@ -9,10 +9,21 @@
     /* border: solid 0.1px rgb(109, 109, 109); */
     background-color: rgb(255, 255, 255);
 }
-.maru {
-    width: 60%;
-    height: 60%;
+.high_motivation {
     border-radius: 50%;
     /* border: solid 1px rgb(109, 109, 109); */
-    background-color: #00c387;
+    background-color: #006e4d;
+}
+.low_motivation {
+    border-radius: 50%;
+    /* border: solid 1px rgb(109, 109, 109); */
+    background-color: #00c58a;
+}
+.many_commits {
+    width: 100%;
+    height: 100%;
+}
+.few_commits {
+    width: 60%;
+    height: 60%;
 }
