--- a/app/styles/my_page/RecentCommits.module.css
+++ b/app/styles/my_page/RecentCommits.module.css
@@ -1,6 +1,19 @@
 .column_date {
     width: 5vw;
 }
+.column_count {
+    width: 7vw;
+    display: flex;
+    align-items: flex-end;
+}
+.column_count_value {
+    font-size: 17px;
+}
+.column_count_commits {
+    font-size: 13px;
+    margin-left: 3px;
+    margin-bottom: 1px;
+}
 .column_name {
     width: 13vw;
 }
